--- a/menu/index.html
+++ b/menu/index.html
@@ -8,14 +8,23 @@
     </title>
     <meta name="title" content="Menu" data-pagefind-meta="title[content]" data-pagefind-index="true"/>
     <meta name="description" content="Explore our delicious Vietnamese dishes, from classic pho to fresh salads and bánh mì." data-pagefind-meta="description[content]"/>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.css" rel="stylesheet"/>
     <link href="/assets/css/styles.css" rel="stylesheet"/>
     <link rel="icon" href="/assets/images/favicon.svg" type="image/x-icon"/>
+
+    <script>
+      (() => {
+        const storedTheme = localStorage.getItem("theme") || "dark";
+        document.documentElement.setAttribute("data-bs-theme", storedTheme);
+      })();
+    </script>
   </head>
-  <body class="bg-body" data-bs-theme="dark">
+
+  <body class="bg-body">
     <div>
-      <nav class="navbar shadow-lg sticky-top bg-body" id="navbar-main">
+      <nav class="navbar sticky-top bg-body" id="navbar-main">
   <div class="container">
     <a class="navbar-brand d-flex align-items-center gap-2" href="/">
       <img
@@ -78,15 +87,17 @@
     </div>
   </div>
 </div>
+
       <div data-pagefind-body>
         <span class="visually-hidden">
           Menu
           Explore our delicious Vietnamese dishes, from classic pho to fresh salads and bánh mì.
-          
         </span>
       </div>
+
       <main class="py-3 py-md-5">
-        <div class="container"><style>
+        <div class="container">
+          <style>
 h3 + p {
   margin-bottom: 2rem;
   line-height: 1.6;
@@ -157,23 +168,54 @@ h3 + p {
 <i class="bi bi-arrow-left me-2"></i>
 Back to Home</a>
 </div>
-</div>
+
+        </div>
       </main>
     </div>
-    <div class="">
 
-  <footer class="py-4 mt-auto" id="footer-main">
-    <br>
-    <br>
-    <div class="container d-flex flex-wrap justify-content-between align-items-center gap-4 text-light fs-5 fw-normal">
-      <div class="">
+    <div>
+  <footer class="py-2 mt-auto" id="footer-main">
+    <div class="container d-flex flex-wrap justify-content-between align-items-center gap-4 fs-5 fw-normal">
+      <div>
         © 2026
-        <a href="/" class="text-decoration-none text-light">Vinny&#39;s Eatery</a>
+        <a href="/" class="text-decoration-none link-body-emphasis">Vinny&#39;s Eatery</a>
       </div>
+
+      <button
+        class="btn btn-outline-light"
+        type="button"
+        onclick="toggleTheme()"
+        aria-label="Toggle dark/light mode"
+      >
+        <i id="theme-icon" class="bi bi-moon-fill"></i>
+      </button>
     </div>
   </footer>
 </div>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/assets/js/search.js" defer></script>
+
+    <script>
+      const toggleTheme = () => {
+        const html = document.documentElement;
+        const current = html.getAttribute("data-bs-theme");
+        const next = current === "dark" ? "light" : "dark";
+        html.setAttribute("data-bs-theme", next);
+        localStorage.setItem("theme", next);
+        updateThemeIcon(next);
+      };
+
+      const updateThemeIcon = (theme) => {
+        const icon = document.getElementById("theme-icon");
+        if (!icon) return;
+        icon.className = theme === "dark"
+          ? "bi bi-moon-fill"
+          : "bi bi-sun-fill";
+      };
+
+      updateThemeIcon(document.documentElement.getAttribute("data-bs-theme"));
+    </script>
   </body>
 </html>
