deploy: 17609d0650daa7e13df92e9f7b62597d2bfebb71

--- a/menu/index.html
+++ b/menu/index.html
@@ -98,70 +98,67 @@
       <main class="py-3 py-md-5">
         <div class="container">
           <style>
-h3 + p {
-  margin-bottom: 2rem;
-  line-height: 1.6;
-}
+h3 + p { margin-bottom: 2rem; line-height: 1.6; }
 </style>
 <h1>Menu</h1>
 <hr>
-<h3>Beef Noodle (Phở Bò)</h3>
+<h3>1. Beef Noodle (Phở Bò)</h3>
 <p>Rice noodle, rare beef, brisket beef, onion, spring onion, coriander, bean shoot, Vietnamese mint, chili, lemon with beef broth.</p>
-<h3>Spicy Beef Noodle Soup (Bún Bò Huế)</h3>
+<h3>2. Spicy Beef Noodle Soup (Bún Bò Huế)</h3>
 <p>Big round noodle, rare beef, brisket beef, pork, onion, spring onion, coriander, bean shoot, Vietnamese mint, chili, lemon with spicy beef broth.</p>
-<h3>Vermicelli Salad with Pork (Heo Xã)</h3>
+<h3>3. Vermicelli Salad with Pork (Heo Xã)</h3>
 <p>Rice vermicelli, mixed salad, pickled carrot, cucumber, cooked with pork, lemongrass, onion in special sauce. Topped with fried onion, sesame, coriander, chili, and fish sauce.</p>
-<h3>Vietnamese Chicken Coleslaw (Gỏi Gà)</h3>
+<h3>4. Vietnamese Chicken Coleslaw (Gỏi Gà)</h3>
 <p>Fresh white cabbage, purple cabbage, mixed salad, onion, pickled carrot, cucumber, coriander, fried onion, sesame, bean shoot, chili, cooked breast chicken mixed together in special salad sauce.</p>
-<h3>Singapore Noodle (Seafood, Chicken, or Tofu)</h3>
+<h3>5. Singapore Noodle (Seafood, Chicken, or Tofu)</h3>
 <p>Thin rice noodle cooked with onion, egg, chicken, fresh carrot, bean shoot, spring onion with special ingredients topped with coriander, sesame, chili, fried onion.</p>
-<h3>Chicken Curry (Cà Ri Gà)</h3>
+<h3>6. Chicken Curry (Cà Ri Gà)</h3>
 <p>Fresh chicken breast cooked with onion, lemongrass, coconut milk, coconut cream, combined with carrot, potato, special curry ingredients. Served with rice.</p>
-<h3>Broken Rice (Cơm Tấm)</h3>
+<h3>7. Broken Rice (Cơm Tấm)</h3>
 <p>Pork chop, fried egg, shredded pork, tomato, pickled carrot. Served with broken rice.</p>
-<h3>Crispy Chicken with Red Rice (Cơm Gà Đỏ)</h3>
+<h3>8. Crispy Chicken with Red Rice (Cơm Gà Đỏ)</h3>
 <p>Chicken drumstick deep-fried until crispy, served with tomato, cucumber, mixed salad, special cooked red rice topped with sweet chili sauce and fish sauce.</p>
-<h3>BBQ Pork Bánh Mì</h3>
+<h3>9. BBQ Pork Bánh Mì</h3>
 <p>Bánh mì filled with chicken pate, BBQ pork, pickled carrot, white and red cabbage, cucumber, coriander, spring onion, fried onion, topped with house sauce, mayo, and chili.</p>
-<h3>Bacon and Egg Roll with Small Coffee</h3>
+<h3>10. Bacon and Egg Roll with Small Coffee</h3>
 <p>Two fried eggs and bacon in buttered bánh mì or toast, topped with salt, pepper, tomato, or BBQ sauce.</p>
-<h3>Chicken Pho (Phở Gà)</h3>
+<h3>11. Chicken Pho (Phở Gà)</h3>
 <p>Rice noodle, chicken, onion, spring onion, coriander, bean shoot, Vietnamese mint, chili, lemon with chicken broth.</p>
-<h3>Chicken Wonton Noodle</h3>
+<h3>12. Chicken Wonton Noodle</h3>
 <p>Egg noodle, BBQ chicken slice, chicken wonton, carrot, bok choy, Chinese cabbage, onion, spring onion, coriander, fried onion, lemon, and chili with chicken broth.</p>
-<h3>Vermicelli Salad with Beef (Bò Xã)</h3>
+<h3>13. Vermicelli Salad with Beef (Bò Xã)</h3>
 <p>Rice vermicelli, mixed salad, pickled carrot, cucumber, cooked with beef, lemongrass, onion in special sauce. Topped with fried onion, sesame, coriander, chili, and fish sauce.</p>
-<h3>Vermicelli Salad with Chicken (Gà Xã)</h3>
+<h3>14. Vermicelli Salad with Chicken (Gà Xã)</h3>
 <p>Rice vermicelli, mixed salad, pickled carrot, cucumber, cooked with chicken, lemongrass, onion in special sauce. Topped with fried onion, sesame, coriander, chili, and fish sauce.</p>
-<h3>Vermicelli Salad with Tofu (Bún Đậu Hũ)</h3>
+<h3>15. Vermicelli Salad with Tofu (Bún Đậu Hũ)</h3>
 <p>Rice vermicelli, mixed salad, pickled carrot, cucumber, cooked with tofu, lemongrass, onion in special sauce. Topped with fried onion, sesame, coriander, chili, and soy sauce.</p>
-<h3>Chicken Salad Bowl</h3>
+<h3>16. Chicken Salad Bowl</h3>
 <p>Chicken, mixed salad, cucumber, shredded carrot, onion, coriander, fried onion, bean shoot, tomato mixed together in special sauce.</p>
-<h3>Pork Chop with Rice</h3>
+<h3>17. Pork Chop with Rice</h3>
 <p>Pork chop, tomato, pickled carrot, and mixed salad. Served with rice.</p>
-<h3>Plain Fried Rice</h3>
+<h3>18. Plain Fried Rice</h3>
 <p>Plain rice fried with onion, egg, mixed vegetables, bean shoot, spring onion, topped with coriander, fried onion, sesame, and chili.</p>
-<h3>BBQ Chicken Fried Rice</h3>
+<h3>19. BBQ Chicken Fried Rice</h3>
 <p>Plain rice fried with BBQ chicken, onion, egg, mixed vegetables, bean shoot, spring onion, topped with coriander, fried onion, sesame, and chili.</p>
-<h3>BBQ Pork Fried Rice</h3>
+<h3>20. BBQ Pork Fried Rice</h3>
 <p>Plain rice fried with BBQ pork, onion, egg, mixed vegetables, bean shoot, spring onion, topped with coriander, fried onion, sesame, and chili.</p>
-<h3>Tofu Fried Rice (V)</h3>
+<h3>21. Tofu Fried Rice (V)</h3>
 <p>Plain rice fried with tofu, onion, egg, mixed vegetables, bean shoot, spring onion, topped with coriander, fried onion, sesame, and chili.</p>
-<h3>Vinny's Special Chicken with Salad</h3>
+<h3>22. Vinny's Special Chicken with Salad</h3>
 <p>Special marinated chicken served with a small bowl of mixed salad and rice.</p>
-<h3>Hainanese Chicken</h3>
+<h3>23. Hainanese Chicken</h3>
 <p>Chicken drumstick cooked with ginger and shallot chicken stock, served with special sauce and Hainanese-style rice.</p>
-<h3>BBQ Chicken Bánh Mì</h3>
+<h3>24. BBQ Chicken Bánh Mì</h3>
 <p>Bánh mì filled with butter, BBQ chicken, pickled carrot, cucumber, coriander, spring onion, fried onion, topped with house sauce, mayo, and chili.</p>
-<h3>Roast Pork Bánh Mì</h3>
+<h3>25. Roast Pork Bánh Mì</h3>
 <p>Bánh mì filled with chicken pate, roast pork, pickled carrot, cucumber, coriander, spring onion, fried onion, topped with house sauce, mayo, and chili.</p>
-<h3>Tofu Bánh Mì</h3>
+<h3>26. Tofu Bánh Mì</h3>
 <p>Bánh mì filled with butter, special cooked tofu, pickled carrot, cucumber, coriander, spring onion, fried onion, topped with mayo, special soy sauce, and chili.</p>
-<h3>Tuna Bánh Mì</h3>
+<h3>27. Tuna Bánh Mì</h3>
 <p>Bánh mì filled with butter, tuna, carrot, cucumber, tomato, onion, lettuce, topped with mayo, salt, pepper, and chili.</p>
-<h3>Chicken Salad Bowl</h3>
+<h3>28. Chicken Salad Bowl</h3>
 <p>Chicken, mixed salad, cucumber, shredded carrot, onion, coriander, fried onion, bean shoot, tomato mixed together in special sauce.</p>
-<h3>Tuna Salad Bowl</h3>
+<h3>29. Tuna Salad Bowl</h3>
 <p>Tuna, mixed salad, cucumber, shredded carrot, onion, coriander, fried onion, bean shoot, tomato mixed together in special sauce.</p>
 <div class="d-flex justify-content-center">
   <a href="/" class="btn btn-primary">
